--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "config/deploy"]
 	path = config/deploy
 	url = git@github.com:NYULibraries/illiad_settings.git
+[submodule "sass/lib"]
+	path = sass/lib
+	url = git@github.com:NYULibraries/nyu-libraries-stylesheets.git
