Abstract FTP commands into compose for configurability

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,36 @@ x-build: &build
   build:
     context: .
   image: illiad-templates
-x-dev-env: &dev-env
-  <<: *build
-  env_file:
-    - test.env
 
 services:
-  dev:
-    <<: *dev-env
+  dev-deploy: &dev-deploy
+    <<: *build
     tty: true
     stdin_open: true
+    environment:
+      FTP_CMD: "put ./index-dev.html -o index.html; put ./error.asp; mput ./dist/views/*.html; mirror -R ./sass/lib/images; cd ./javascripts; put ./dist/javascripts/illiad.js; cd ../stylesheets; put ./dist/stylesheets/illiad.css; exit"
+    env_file:
+      - test.env
+
+  dev-setup:
+    <<: *dev-deploy
+    environment:
+      FTP_CMD: "mkdir -p ./javascripts; mkdir -p ./stylesheets; mkdir -p ./images; exit;"
+    env_file:
+      - test.env
+
+  prod-deploy: &prod-deploy
+    <<: *build
+    tty: true
+    stdin_open: true
+    environment:
+      FTP_CMD: "put ./index-prod.html -o index.html; put ./error.asp; mput ./dist/views/*.html; mirror -R ./sass/lib/images; cd ./javascripts; put ./dist/javascripts/illiad.js; cd ../stylesheets; put ./dist/stylesheets/illiad.css; exit"
+    env_file:
+      - test.env
+
+  prod-setup:
+    <<: *prod-deploy
+    environment:
+      FTP_CMD: "mkdir -p ./javascripts; mkdir -p ./stylesheets; mkdir -p ./images; exit;"
+    env_file:
+      - test.env
