Set lftp log to blank to force stderr

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,8 +20,8 @@ services:
       FTP_PASSWORD:
       FTP_HOST:
       FTP_PROXY:
-    env_file:
-      - test.env
+    # env_file:
+    #   - test.env
 
   dev-setup:
     <<: *dev-deploy
