--- a/mustaches.yml
+++ b/mustaches.yml
@@ -26,7 +26,7 @@ views:
     - ViewSearchResults
     - ElectronicDeliveryUndelete
     - Error
-    - NewAuthRegistration
+    # - NewAuthRegistration
   - include_header
   - include_menu
   - include_footer
