Copy over pre-built NS files into docker dir structure so we can FTP those as-is, NOTE it is not using the ruby templates we use for NYU

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ x-build-image: &build-image
       - quay.io/nyulibraries/illiad-templates:$BRANCH_NO_SLASH
     args:
       AQUA_MICROSCANNER_TOKEN:
+  image: illiad-templates
   environment:
     BRANCH_NO_SLASH:
 
