--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,9 @@ hermes_deploy: &hermes_deploy
       docker run -e HERMES_HOST -e HERMES_SECRET quay.io/nyulibraries/hermesclient:master createJob -job=illiad-templates -tag=$TAG
       docker run -e HERMES_HOST -e HERMES_SECRET -e HERMES_WAIT_TIMEOUT=6m quay.io/nyulibraries/hermesclient:master jobStatus -job=illiad-templates
 
-version: 2
+version: 2.1
+orbs:
+  aws-s3: circleci/aws-s3@1.0.11
 jobs:
   build-image:
     <<: *docker-defaults
@@ -79,6 +81,25 @@ jobs:
             echo 'export HERMES_SECRET=$HERMES_SECRET_PROD' >> $BASH_ENV
       - <<: *hermes_deploy
 
+  deploy-dev-s3:
+    steps:
+      - setup_remote_docker
+      - run:
+          name: Compile and copy CSS and JS assets 
+          command: |
+            docker-compose run compile
+            docker cp illiad-templates_compile_run_1:/app/dist .
+      - aws-s3/sync:
+          from: dist
+          to: 's3://cdn-dev.library.nyu.edu/illiad'
+          arguments: |
+            --exclude "*" \
+            --include "javascripts/illiad.js" \
+            --include "stylesheets/illiad.css" \
+            --delete
+          overwrite: true
+
+
 workflows:
   version: 2
   deploy:
@@ -87,6 +108,7 @@ workflows:
       - deploy-dev:
           requires:
             - build-image
+            - deploy-dev-s3
           filters:
             branches:
               ignore:
