--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -82,6 +82,7 @@ jobs:
       - <<: *hermes_deploy
 
   deploy-dev-s3:
+    <<: *docker-defaults
     steps:
       - setup_remote_docker
       - run:
@@ -89,6 +90,11 @@ jobs:
           command: |
             docker-compose run compile
             docker cp illiad-templates_compile_run_1:/app/dist .
+      - run:
+          name: Export AWS Dev env vars
+          command: |
+            echo 'export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_DEV}' >> $BASH_ENV
+            echo 'export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_DEV}' >> $BASH_ENV
       - aws-s3/sync:
           from: dist
           to: 's3://cdn-dev.library.nyu.edu/illiad'
@@ -99,9 +105,8 @@ jobs:
             --delete
           overwrite: true
 
-
 workflows:
-  version: 2
+  version: 2.1
   deploy:
     jobs:
       - build-image
