Add s3-dev-deploy job to jobs list

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,6 +110,7 @@ workflows:
   deploy:
     jobs:
       - build-image
+      - deploy-dev-s3
       - deploy-dev:
           requires:
             - build-image
