Require build image before s3 sync

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -110,7 +110,9 @@ workflows:
   deploy:
     jobs:
       - build-image
-      - deploy-dev-s3
+      - deploy-dev-s3:
+          requires: 
+            - build-image
       - deploy-dev:
           requires:
             - build-image
