--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,8 @@ jobs:
           name: Compile and copy CSS and JS assets 
           command: |
             docker-compose run compile
-            docker cp illiad-templates_compile_run_1:/app/dist .
+            docker ps -a
+            # docker cp illiad-templates_compile_run_1:/app/dist .
       # - run:
       #     name: Export AWS Dev env vars
       #     command: |
