Switch js and css location based on illiad env var

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
   compile:
     <<: *build-image
     command: ["ruby", "compile.rb"]
+    environment:
+      ILLIAD_ENV:
 
   dev-deploy: &dev-deploy
     <<: *build-image
