--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,6 +54,7 @@ aws_dev_env: &aws_dev_env
   run:
     name: Export AWS Dev env vars
     command: |
+      echo 'export ILLIAD_ENV=development' >> $BASH_ENV
       echo 'export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_DEV}' >> $BASH_ENV
       echo 'export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_DEV}' >> $BASH_ENV
 
@@ -72,6 +73,7 @@ aws_prod_env: &aws_prod_env
   run:
     name: Export AWS Dev env vars
     command: |
+      echo 'export ILLIAD_ENV=production' >> $BASH_ENV
       echo 'export AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID_PROD}' >> $BASH_ENV
       echo 'export AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY_PROD}' >> $BASH_ENV
 
