Add volumes commented out

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     command: ["ruby", "compile.rb"]
     environment:
       ILLIAD_ENV:
+    # volumes:
+    #   - .:/app
 
   dev-deploy: &dev-deploy
     <<: *build-image
